# grasping

./: .gitignore  .gitmodules  README.md  camera-mount.stl
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/humble/: Dockerfile  devcontainer.json
.devcontainer/jazzy/: Dockerfile  devcontainer.json
.devcontainer/omron/: Dockerfile  devcontainer.json
.devcontainer/omron-moma/: Dockerfile  devcontainer.json
.devcontainer/tm/: devcontainer.json
.devcontainer/tms/: Dockerfile  devcontainer.json
.devcontainer/ur/: Dockerfile  devcontainer.json
anygrasp_ros/: package.xml  setup.cfg  setup.py
docs/: anygrasp.md  grasping.md  issues.md  launch.md  macvlan.md  testing.md
docs/camera/: realsense.md
docs/control/: arm_control.md  control_stack_overview.md  grasping_pipeline.md  workspace_creation.md
docs/manipulator/: adding_new_components.md  calibration.md  connection.md  techman.md  teleop.md  tf_frames.md  tm12s_connection.md  tm12s_startup.md  tm12s_tf_frames.md  universal.md  ur10_connection.md  ur10_startup.md  ur10_tf_frames.md
docs/workspace/: creation.md  loading.md
grasping/: package.xml  setup.cfg  setup.py
grasping/grasping/: grasping_node.py
grasping/launch/: grasping_bridge.launch.py  grip.launch.py
grasping_arm_control/: README.md  package.xml  setup.cfg  setup.py
grasping_arm_control/config/: shape_definitions.yaml  workspace.yaml  workspace_empty.yaml
grasping_arm_control/grasping_arm_control/: arm_control_node.py  common.py  workspace_calibration_node.py  workspace_utils.py
grasping_arm_control/launch/: ur10.launch.py  ur10_soft_two_fingers_gripper.launch.py
grasping_camera/: CMakeLists.txt  package.xml
grasping_camera/config/: global_settings.yaml
grasping_camera/launch/: d435.launch.py
grasping_control/: README.md  package.xml  setup.py
grasping_control/config/: crlab_table.yaml  shape_definitions.yaml  workspace_1.yaml  workspace_empty.yaml
grasping_control/grasping_control/: common.py  motion_execution_node.py  servo_teleop.py  workspace_creation_node.py  workspace_utils.py
grasping_control/launch/: tm12s.launch.py  tm12s_soft_two_fingers.launch.py  ur10.launch.py  ur10_soft_two_fingers.launch.py
grasping_control/rviz/: view_tobot.rviz
grasping_description/: CMakeLists.txt  package.xml
grasping_description/config/ur10/: visual_parameters.yaml
grasping_description/urdf/: ur10-two-finger.urdf.xacro  ur10-with-camera-mount.urdf.xacro
grasping_description/xacro/: camera-mount.urdf.xacro  ur10-soft-two-fingers.urdf.xacro
grasping_moveit_config/tm12s_soft_two_fingers_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
grasping_moveit_config/ur10_moveit_config/: CMakeLists.txt  package.xml
grasping_moveit_config/ur10_moveit_config/config/: ur_kinematics.yaml  ur_servo.yaml
grasping_moveit_config/ur10_moveit_config/launch/: hardware_with_moveit.launch.py  ur_moveit.launch.py
grasping_moveit_config/ur10_moveit_config/srdf/: ur.srdf.xacro
grasping_moveit_config/ur10_soft_two_fingers_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
grasping_msgs/: CMakeLists.txt  package.xml
grasping_msgs/action/: MoveToPose.action
ur10_launch/: CMakeLists.txt  package.xml
ur_grasping/: package.xml  setup.py
ur_grasping/ur_grasping/: grasping_node.py
ur_launch/: CMakeLists.txt  package.xml
ur_launch/launch/: camera.launch.py  grip.launch.py
(+47 files in other folders)
