<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur10_moveit_config</name>
  <version>0.3.0</version>
  <description>
    Thin launch-wrapper package that hosts the UR10 hardware-with-MoveIt launch entrypoint.
  </description>
  <maintainer email="kalanaratnayake95@gmail.com">Kalana Ratnayake</maintainer>

  <license>BSD</license>

  <url type="website">http://moveit.ros.org/</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit2</url>

  <author email="kalanaratnayake95@gmail.com">Kalana Ratnayake</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>grasping_description</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ur_moveit_config</exec_depend>
  <exec_depend>ur_robot_driver</exec_depend>


  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
